==> levizh/zephyr/drivers/adc/adc_hc32.c <==
#define DT_DRV_COMPAT xhsc_hc32_adc
#include <errno.h>
#include <zephyr/drivers/adc.h>
#include <zephyr/drivers/pinctrl.h>
#include <zephyr/device.h>
#include <zephyr/kernel.h>
#include <zephyr/init.h>
#include <soc.h>
#include <hc32_ll_adc.h>
#include <zephyr/drivers/dma/dma_hc32.h>
#include <zephyr/drivers/dma.h>
#include <zephyr/toolchain.h>
#include <hc32_ll_dma.h>
#define ADC_CONTEXT_USES_KERNEL_TIMER
#define ADC_CONTEXT_ENABLE_ON_COMPLETE
#include "adc_context.h"
#define LOG_LEVEL CONFIG_ADC_LOG_LEVEL
#include <zephyr/logging/log.h>
#include <zephyr/drivers/clock_control/hc32_clock_control.h>
#include <zephyr/irq.h>
#include <zephyr/drivers/interrupt_controller/intc_hc32.h>
#include <zephyr/mem_mgmt/mem_attr.h>
#define ADC_MAX_CHANNEL		(17U)
#define DT_SPEC_AND_COMMA(node_id, prop, idx) ADC_DT_SPEC_GET_BY_IDX(node_id, idx),
#define CHANNEL_TABLE_SIZE (ARRAY_SIZE(channels))
#define CHANNEL_TABLE_SIZE	(ADC_MAX_CHANNEL)

static void adc_hc32_start_conversion(const struct device *dev)
{
	uint8_t idx;
	struct adc_hc32_data *data = dev->data;
	const struct adc_hc32_config *config = data->dev_adc->config;
	CM_ADC_TypeDef *ADCx = (CM_ADC_TypeDef *)config->base;

#ifdef CONFIG_ADC_ASYNC
	if (false == data->is_async_read) {
		ADC_IntCmd(ADCx, ADC_INT_EOCA, ENABLE);
	} else {
		ADC_IntCmd(ADCx, ADC_INT_EOCA, DISABLE);
	}
#else
	/* Enable interrupt only */
	ADC_IntCmd(ADCx, ADC_INT_EOCA, ENABLE);
#endif /* CONFIG_ADC_ASYNC */

	/* Enable channels */
	for (idx = 0; idx < data->channel_count; idx++) {
		ADC_ChCmd(ADCx, ADC_SEQ_A, data->channel_table[idx], ENABLE);
	}
	ADC_Start(ADCx);
}

static void adc_context_start_sampling(struct adc_context *ctx)
{
	struct adc_hc32_data *data = CONTAINER_OF(ctx, struct adc_hc32_data, ctx);

	data->repeat_buffer = data->buffer;

#ifdef CONFIG_ADC_ASYNC
	if (true == data->is_async_read) {
		adc_hc32_dma_start(data->dev_adc, &ctx->options);
	}
#endif /* CONFIG_ADC_ASYNC */
	adc_hc32_start_conversion(data->dev_adc);
}

static int start_read(const struct device *dev,
		      const struct adc_sequence *sequence)
{
	int err, max_chs, idx;
	uint8_t *p_temp;
	const struct adc_hc32_config *config = dev->config;
	struct adc_hc32_data *data = dev->data;
	CM_ADC_TypeDef *ADCx = (CM_ADC_TypeDef *)config->base;
	stc_adc_init_t stc_adc_init_struct;

	(void)ADC_StructInit(&stc_adc_init_struct);

	data->buffer = sequence->buffer;
	data->channels_map = sequence->channels;
	data->channel_count = POPCOUNT(data->channels_map);
	data->is_finish_sample = false;
	data->samples_count = 1U;
	if (sequence->options != NULL) {
		data->samples_count += sequence->options->extra_samplings;
	}

	if (CM_ADC1 == ADCx) {
		max_chs = ADC_CH16;
	} else {
		max_chs = ADC_CH7;
	}

	if (data->channel_count > max_chs) {
		LOG_ERR("channel count error");
		return -EINVAL;
	}
	/*
	check if channels valid with channel mask ((0x1U << (max_chs + 1)) - 0x1U).
	for adc0 total 17 channel, channel mask is 0x0001_FFFF,
	for adc1 total 8 channel, channel mask is 0x0000_00FF
	*/
	if (!(sequence->channels & ((0x1U << (max_chs + 1)) - 0x1U))) {
		LOG_ERR("Error channel ids");
		return -EINVAL;
	}

	p_temp = data->channel_table;
	for (idx = 0; idx < max_chs; idx++) {
		if (((data->channels_map >> idx) & 0x1U) == 0x1U) {
			*p_temp++ = idx;
		}
		if ((uint32_t)p_temp - (uint32_t)data->channel_table
				>= data->channel_count) {
			break;
		}
	}

	if (data->samples_count > 1U) {
		stc_adc_init_struct.u16ScanMode = ADC_MD_SEQA_CONT;
	} else {
		stc_adc_init_struct.u16ScanMode = ADC_MD_SEQA_SINGLESHOT;
	}

	if (sequence->oversampling >= 9U) {
		LOG_ERR("Unsupported over sampling count");
		return -EINVAL;
	} else if (sequence->oversampling > 0U &&  sequence->oversampling < 9U) {
		ADC_ConvDataAverageConfig(ADCx,
				(sequence->oversampling - 1) << ADC_CR0_AVCNT_POS);
		for (idx = 0; idx < data->channel_count; idx++) {
			ADC_ConvDataAverageChCmd(ADCx, data->channel_table[idx], ENABLE);
		}
	} else {
		for (idx = 0; idx < data->channel_count; idx++) {
			ADC_ConvDataAverageChCmd(ADCx, data->channel_table[idx], DISABLE);
		}
	}

	if (8U == sequence->resolution) {
		stc_adc_init_struct.u16Resolution = ADC_RESOLUTION_8BIT;
	} else if (10U == sequence->resolution) {
		stc_adc_init_struct.u16Resolution = ADC_RESOLUTION_10BIT;
	} else if (12U == sequence->resolution) {
		stc_adc_init_struct.u16Resolution = ADC_RESOLUTION_12BIT;
	} else {
		LOG_ERR("Error resolution");
		return -EINVAL;
	}

	for (idx = 0; idx < data->channel_count; idx++) {
		if (data->sample_time[idx] >= 0x0B) {
			ADC_SetSampleTime(ADCx, data->channel_table[idx],
				data->sample_time[idx]);
		} else {
			ADC_SetSampleTime(ADCx, data->channel_table[idx], 0x40U);
		}
	}
	ADC_Init(ADCx, &stc_adc_init_struct);

	adc_context_start_read(&data->ctx, sequence);
	err = adc_context_wait_for_completion(&data->ctx);

	return err;
}

static int adc_hc32_read(const struct device *dev,
			    const struct adc_sequence *sequence)
{
	struct adc_hc32_data *data = dev->data;
	int err;

	data->is_async_read = false;
	adc_context_lock(&data->ctx, false, NULL);
	err = start_read(dev, sequence);
	adc_context_release(&data->ctx, err);

	return err;
}

static int adc_hc32_read_async(const struct device *dev,
				  const struct adc_sequence *sequence,
				  struct k_poll_signal *async)
{
	struct adc_hc32_data *data = dev->data;
	int error;

	data->is_async_read = true;
	adc_context_lock(&data->ctx, true, async);
	error = start_read(dev, sequence);
	adc_context_release(&data->ctx, error);

	return error;
}

static int adc_hc32_init(const struct device *dev)
{
	int err = 0;
	const struct adc_hc32_config *config = dev->config;
	struct adc_hc32_data *data = dev->data;

	/* Init adc pointer address in data structure */
	data->dev_adc = dev;
	/* Enable adc clock */
	err = adc_hc32_clock_enable(dev);
	if (err < 0) {
		LOG_ERR("Failed to enable adc clock");
		return err;
	}
	/* Config adc pin */
	err = pinctrl_apply_state(config->pin_cfg, PINCTRL_STATE_DEFAULT);
	if (err < 0) {
		LOG_ERR("Failed to config adc pin");
		return err;
	}

#ifdef CONFIG_ADC_ASYNC
	if ((data->dma_read.dev_dma == NULL) ||
	    !device_is_ready(data->dma_read.dev_dma)) {
		LOG_ERR("%s device not ready", data->dma_read.dev_dma->name);
		return -ENODEV;
	}

	err = adc_hc32_async_init(dev);
	if (err < 0)
	{
		LOG_ERR("Failed to config dma");
		return -ENODEV;
	}
#endif /* CONFIG_ADC_ASYNC */

#if defined(CONFIG_ADC_HC32_INTERRUPT)
	config->irq_cfg_func(dev);
#endif /* CONFIG_ADC_HC32_INTERRUPT */
	adc_context_unlock_unconditionally(&data->ctx);

	return 0;
}
